--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,8 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - composer install
-  - php app/console fifree2:install admin admin admin@admin.it --env=test
-  #- php app/console server:start --env=test
+  - php bin/console fifree2:install admin admin admin@admin.it --env=test
+  #- php bin/console server:start --env=test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
   #- /usr/bin/php -v
 
@@ -89,7 +89,7 @@ after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
   - vendor/bin/security-checker -n security:check
   - rm app/dbtest.sqlite
-  - php app/console server:stop --env=test
+  - php bin/console server:stop --env=test
   - pkill java
 
 after_failure:
