--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,7 +21,8 @@ framework:
     trusted_hosts:   ~
     session:
         # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        handler_id: session.handler.native_file
+        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
     fragments:       ~
     http_method_override: true
     #Questo serve per fare la traduzione della FosUserBundle per le label di username, password, remember_me, ecc..
