--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,7 +20,7 @@
         </testsuite>
     </testsuites>
     <php>
-        <server name="KERNEL_DIR" value="app/" />        
+        <server name="KERNEL_CLASS" value="AppKernel" />
     </php>
 
     <filter>
