--- a/composer.json
+++ b/composer.json
@@ -41,24 +41,24 @@
         ]
     },
     "require": {
-        "php": ">=5.6.0",
-        "symfony/symfony": "3.4.0-BETA3 as 3.4.0",
-        "symfony/swiftmailer-bundle": "^2.4",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
+        "php": ">=7.0.0",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/orm": "^2.5",
+        "fi/osbundle": "~2.0",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpword": "^0.13.0",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "twig/twig": "^1.0||^2.0",
-        "friendsofsymfony/user-bundle": "~2.0",
-        "fi/osbundle": "~2.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/symfony": "3.4.0-BETA3 as 3.4.0",
         "tecnickcom/tcpdf": "^6.2",
-        "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
