--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -41,6 +41,7 @@ services:
     #Gestione permessi
     ficorebundle.gestionepermessi:
         class: Fi\CoreBundle\DependencyInjection\GestionePermessi
+        public: true
         arguments: [ '@service_container', '@security.token_storage', '@doctrine.orm.entity_manager' ]
             
     ficorebundle.tblprefix_subscriber:
