--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then ant; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then ant; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.1" ]]; then ant; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then ant; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit --filter FiUtilitaTest --filter OperatoriCommandTest --filter PannelloAmministrazioneTest --filter ArrayFunctionsTestCase --filter testAddOperatore; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit tests/Entity; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit tests/Form; fi
@@ -87,7 +88,7 @@ script:
 
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
-  - vendor/bin/security-checker -n security:check
+  - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
   - rm app/dbtest.sqlite
   - php bin/console server:stop --env=test
   - pkill java
