--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="Fifree2 CoreBundle" default="build">
     <target name="build"
-            depends="prepare,composer-run-install,php-lint-ci,phpmd-ci,phpcs-ci,phpcpd-ci,php-security-checker,phpunit-ci"/>
+            depends="prepare,composer-run-install,fifree-clean,fifree-install,php-lint-ci,phpmd-ci,phpcs-ci,phpcpd-ci,php-security-checker,phpunit-ci"/>
 
     <target name="clean" description="Cleanup build artifacts">
         <delete dir="build/artifacts/coverage"/>
@@ -33,7 +33,18 @@
 
     <target name="composer-run-install" depends="composer-update">
         <exec executable="php" failonerror="true">
-            <arg line="composer.phar install --dev --prefer-source"/>
+            <arg line="composer.phar install"/>
+        </exec>
+    </target>
+
+    <target name="fifree-clean" depends="composer-update">
+        <exec executable="php" failonerror="true">
+            <arg line="bin/console doctrine:database:drop --env=test --force"/>
+        </exec>    
+    </target>
+    <target name="fifree-install" depends="composer-update">
+        <exec executable="php" failonerror="true">
+            <arg line="bin/console fifree2:install admin admin admin@admin.it --env=test"/>
         </exec>
     </target>
 
