--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,9 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-  #- php bin/console server:start --env=test
+  - composer install
+  - php bin/console fifree2:install admin admin admin@admin.it --env=test
+    #- php bin/console server:start --env=test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
   - /usr/bin/php -v
   - wget -O - http://127.0.0.1:8000/app_test.php/adminpanel
