--- a/composer.json
+++ b/composer.json
@@ -42,31 +42,30 @@
     },
     "require": {
         "php": ">=5.6.0",
+        "symfony/symfony": "3.4.0-RC2 as 3.4.0",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
+        "sensio/distribution-bundle": "~5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "fi/osbundle": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
-        "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0",
-        "sensio/distribution-bundle": "~5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.4",
-        "symfony/symfony": "3.4.0-RC2 as 3.4.0",
-        "tecnickcom/tcpdf": "^6.2",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "symfony/web-server-bundle": "v3.4.0-RC2",
+        "symfony/web-profiler-bundle": "^3.3",
+        "symfony/phpunit-bridge": "^3.0",
         "sensio/generator-bundle": "^3.0",
         "sensiolabs/security-checker": "^4.0",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "^2.7",
-        "phpmd/phpmd": "^2.4",
-        "sebastian/phpcpd": "^2.0",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "symfony/swiftmailer-bundle": "^2.4",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpword": "^0.13.0",
+        "tecnickcom/tcpdf": "^6.2",
         "mockery/mockery": "^0.9.5",
         "behat/behat": "^3.0",
         "behat/mink-selenium2-driver": "^1.3",
@@ -74,11 +73,12 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
-        "symfony/web-profiler-bundle": "^3.3",
-        "symfony/phpunit-bridge": "^3.0",
         "se/selenium-server-standalone": "^2.0",
-        "phpunit/phpunit": "^5.5",
-        "symfony/web-server-bundle": "v3.4.0-RC2"
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^2.7",
+        "phpmd/phpmd": "^2.4",
+        "sebastian/phpcpd": "^2.0",
+        "phpunit/phpunit": "^5.5"
     },
     "scripts": {
         "symfony-scripts": [
