--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "symfony/symfony": "3.4.0-RC2 as 3.4.0",
+        "symfony/symfony": "3.4.*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "~5.0",
@@ -54,7 +54,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "symfony/web-server-bundle": "v3.4.0-RC2",
+        "symfony/web-server-bundle": "3.4.*",
         "symfony/web-profiler-bundle": "^3.3",
         "symfony/phpunit-bridge": "^3.0",
         "sensio/generator-bundle": "^3.0",
