--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 matrix:
     allow_failures:
         - php: hhvm
-        - php: 7.2
+        # - php: 7.2
     exclude:
     - php: hhvm
       env: DB=pgsql
