--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,7 @@
             "keep-outdated": true
         },
         "branch-alias": {
-            "dev-master": "dev-3.x"
+            "dev-master": "3.0.x-dev"
         }
     }
 }
