--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,16 +11,31 @@
     processIsolation            = "false"
     stopOnFailure               = "true"
     syntaxCheck                 = "false"
-    bootstrap                   = "vendor/autoload.php" >
+    bootstrap                   = "tests/bootstrap.php" >
 
     <testsuites>
-        <testsuite name="Fifree2 test suite">
-            <directory suffix=".php">./tests</directory>
+        <testsuite name="Collector">
+            <directory suffix=".php">./tests/Collector</directory>
+        </testsuite>
+        <testsuite name="Command">
+            <directory suffix=".php">./tests/Command</directory>
+        </testsuite>
+        <testsuite name="Controller">
+            <directory suffix=".php">./tests/Controller</directory>
+        </testsuite>
+        <testsuite name="DependencyInjection">
+            <directory suffix=".php">./tests/DependencyInjection</directory>
+        </testsuite>
+        <testsuite name="Entity">
+            <directory suffix=".php">./tests/Entity</directory>
+        </testsuite>
+        <testsuite name="Form">
+            <directory suffix=".php">./tests/Form</directory>
         </testsuite>
     </testsuites>
+    
     <php>
         <server name="KERNEL_CLASS" value="AppKernel" />
-        
     </php>
 
     <filter>
