--- a/composer.json
+++ b/composer.json
@@ -57,16 +57,16 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
-        "behat/behat": "^3.0",
+        "behat/behat": "^3.4",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "^1.2",
         "behat/mink-selenium2-driver": "^1.3",
-        "behat/symfony2-extension": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0",
+        "behat/symfony2-extension": "^2.1",
         "mockery/mockery": "^0.9.5",
         "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
