--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,8 @@
         "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
+        "sensio/generator-bundle": "^3.0",
+        "symfony/web-server-bundle": "3.4.*",
         "behat/behat": "^3.4",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
@@ -73,14 +75,12 @@
         "phpmd/phpmd": "^2.4",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0",
-        "satooshi/php-coveralls": "^1.0",
+        "satooshi/php-coveralls": "^2.0",
         "se/selenium-server-standalone": "^2.0",
         "sebastian/phpcpd": "^2.0",
-        "sensio/generator-bundle": "^3.0",
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "symfony/phpunit-bridge": "dev-master",
-        "symfony/web-server-bundle": "3.4.*",
+        "symfony/phpunit-bridge": "^4.0",
         "tecnickcom/tcpdf": "^6.2"
     },
     "scripts": {
