--- a/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
@@ -22,3 +22,9 @@ services:
         public: false
         tags:
             -  { name: console.command }            
+
+    pannelloamministrazione.command.checksrc:
+        class: Fi\PannelloAmministrazioneBundle\Command\ChecksrcCommand
+        public: false
+        tags:
+            -  { name: console.command }
