--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,23 +14,25 @@
     bootstrap                   = "tests/bootstrap.php" >
 
     <testsuites>
-        <testsuite name="Collector">
-            <directory suffix=".php">./tests/Collector</directory>
-        </testsuite>
-        <testsuite name="Command">
-            <directory suffix=".php">./tests/Command</directory>
-        </testsuite>
-        <testsuite name="Controller">
-            <directory suffix=".php">./tests/Controller</directory>
-        </testsuite>
-        <testsuite name="DependencyInjection">
-            <directory suffix=".php">./tests/DependencyInjection</directory>
-        </testsuite>
-        <testsuite name="Entity">
-            <directory suffix=".php">./tests/Entity</directory>
-        </testsuite>
-        <testsuite name="Form">
-            <directory suffix=".php">./tests/Form</directory>
+        <testsuite name="Fifree Core Bundle">
+            <testsuite name="Collector">
+                <directory suffix=".php">./tests/Collector</directory>
+            </testsuite>
+            <testsuite name="Command">
+                <directory suffix=".php">./tests/Command</directory>
+            </testsuite>
+            <testsuite name="Controller">
+                <directory suffix=".php">./tests/Controller</directory>
+            </testsuite>
+            <testsuite name="DependencyInjection">
+                <directory suffix=".php">./tests/DependencyInjection</directory>
+            </testsuite>
+            <testsuite name="Entity">
+                <directory suffix=".php">./tests/Entity</directory>
+            </testsuite>
+            <testsuite name="Form">
+                <directory suffix=".php">./tests/Form</directory>
+            </testsuite>
         </testsuite>
     </testsuites>
     
