--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,11 +34,19 @@
                 <directory suffix=".php">./tests/Form</directory>
             </testsuite>
         </testsuite>
+        <testsuite name="Pannello amministrazione">
+            <testsuite name="Command">
+                <directory suffix=".php">./tests/PannelloAmministrazione/Command</directory>
+            </testsuite>
+            <testsuite name="Controller">
+                <directory suffix=".php">./tests/PannelloAmministrazione/Controller</directory>
+            </testsuite>
+        </testsuite>
     </testsuites>
     
     <php>
         <server name="KERNEL_CLASS" value="AppKernel" />
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="47" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="63" />
     </php>
 
     <filter>
