--- a/composer.json
+++ b/composer.json
@@ -63,25 +63,22 @@
         "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/web-server-bundle": "3.4.*",
-        "behat/behat": "^3.4",
-        "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-goutte-driver": "^1.2",
-        "behat/mink-selenium2-driver": "^1.3",
-        "behat/symfony2-extension": "^2.1",
-        "mockery/mockery": "^0.9.5",
-        "phpmd/phpmd": "^2.4",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0",
+        "tecnickcom/tcpdf": "^6.2",
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/web-server-bundle": "3.4.*",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-selenium2-driver": "^1.3",
+        "behat/symfony2-extension": "^2.1",
         "satooshi/php-coveralls": "^2.0",
-        "se/selenium-server-standalone": "^2.0",
+        "mockery/mockery": "^0.9.5",
+        "phpmd/phpmd": "^2.4",
         "sebastian/phpcpd": "^2.0",
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "symfony/phpunit-bridge": "^4.0",
-        "tecnickcom/tcpdf": "^6.2"
+        "se/selenium-server-standalone": "^2.0"
     },
     "scripts": {
         "symfony-scripts": [
