--- a/tests/app/config/services.yaml
+++ b/tests/app/config/services.yaml
@@ -9,6 +9,14 @@ parameters:
     temascelto: redmond
     browser4test: firefox
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: Fi\CoreBundle\Entity\Operatori
+    from_email:
+        address: "%env(resolve:mailer_user)%"
+        sender_name: "%env(resolve:mailer_user)%"
+        
 services:
     # default configuration for services in *this* file
     _defaults:
