--- a/.travis.yml
+++ b/.travis.yml
@@ -103,6 +103,8 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+  - php -v
+  - which php
 
   
 
