--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
+            "App\\": "tests/src",
             "Fi\\CoreBundle\\": "src/Fi/CoreBundle",
             "Fi\\PannelloAmministrazioneBundle\\": "src/Fi/PannelloAmministrazioneBundle"
         }
@@ -53,6 +54,7 @@
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "3.4.*",
         "symfony/console": "3.4.*",
+        "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.0",
         "symfony/form": "3.4.*",
         "symfony/framework-bundle": "3.4.*",
@@ -81,7 +83,6 @@
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
         "symfony/css-selector": "3.4.*",
-        "symfony/dotenv": "3.4.*",
         "symfony/maker-bundle": "^1.1",
         "symfony/phpunit-bridge": "^3.0|^4.0",
         "symfony/profiler-pack": "^1.0",
