--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "tests/src/App/",
+            "App\\Bundle\\": "tests/src/AppBundle/",
             "Fi\\CoreBundle\\": "src/Fi/CoreBundle",
             "Fi\\PannelloAmministrazioneBundle\\": "src/Fi/PannelloAmministrazioneBundle"
         }
