--- a/tests/config/packages/doctrine.yaml
+++ b/tests/config/packages/doctrine.yaml
@@ -26,6 +26,12 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-        query_cache_driver: apcu
-        metadata_cache_driver: apcu
+        mappings:
+            App:
+                is_bundle: false
+                type: yml
+                dir: '%kernel.project_dir%/../config/doctrine'
+                prefix: 'App\Entity'
+        #query_cache_driver: apcu
+        #metadata_cache_driver: apcu
         result_cache_driver: apcu
