--- a/tests/config/packages/doctrine.yaml
+++ b/tests/config/packages/doctrine.yaml
@@ -30,7 +30,7 @@ doctrine:
             App:
                 is_bundle: false
                 type: yml
-                dir: '%kernel.project_dir%/../config/doctrine'
+                dir: '%kernel.project_dir%/tests/config/doctrine'
                 prefix: 'App\Entity'
         #query_cache_driver: apcu
         #metadata_cache_driver: apcu
