--- a/tests/config/packages/twig.yaml
+++ b/tests/config/packages/twig.yaml
@@ -1,5 +1,5 @@
 twig:
-    paths: ['%kernel.project_dir%/templates']
+    paths: ['%kernel.project_dir%/tests/templates']
     debug: '%kernel.debug%'
     globals:
         appname: "%appname%"
