--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,10 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "3.4.*",
         "symfony/twig-bundle": "3.4.*",
-        "symfony/validator": "3.4.*"
+        "symfony/validator": "3.4.*",
+        "symfony/maker-bundle": "^1.1",
+        "tecnickcom/tcpdf": "^6.2",
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
@@ -71,8 +74,6 @@
         "facebook/webdriver": "^1.5",
         "mockery/mockery": "^0.9.5",
         "phpmd/phpmd": "^2.6",
-        "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0",
         "satooshi/php-coveralls": "^2.0",
         "se/selenium-server-standalone": "3.8.*",
         "sebastian/phpcpd": "^2.0",
@@ -80,12 +81,10 @@
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
         "symfony/css-selector": "3.4.*",
-        "symfony/maker-bundle": "^1.1",
         "symfony/phpunit-bridge": "^3.0|^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/var-dumper": "3.4.*",
-        "symfony/web-server-bundle": "3.4.*",
-        "tecnickcom/tcpdf": "^6.2"
+        "symfony/web-server-bundle": "3.4.*"
     },
     "conflict": {
         "symfony/symfony": "*"
