--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then cp -f ./tests/build/build.hhvm.xml $TRAVIS_BUILD_DIR/build.xml; fi
   - cp -f $TRAVIS_BUILD_DIR/tests/.env.dist $TRAVIS_BUILD_DIR/tests/.env
   
-  - if [[ "$BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/.env; fi
+  - if [[ "$BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/config/packages/test/testdriver.yaml; fi
   - chmod +x bin/console
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
