--- a/composer.json
+++ b/composer.json
@@ -42,19 +42,16 @@
     "require": {
         "php": ">=7.2",
         "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/orm": "^2.5",
         "fi/osbundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0",
         "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "3.4.*",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
         "symfony/flex": "^1.0",
         "symfony/form": "3.4.*",
-        "symfony/framework-bundle": "3.4.*",
         "symfony/lock": "3.4.*",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
@@ -102,7 +99,9 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative tests/%PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check --end-point=http://security.sensiolabs.org/check_lock": "script"
+            "security-checker security:check --end-point=http://security.sensiolabs.org/check_lock": "script",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         }
     },
     "config": {
